--- a/pipelines/appdev/blue-green-app-deployment/ci/pipeline.yml
+++ b/pipelines/appdev/blue-green-app-deployment/ci/pipeline.yml
@@ -11,8 +11,8 @@ resources:
   type: git
   source:
     branch: master
-    uri: https://github.com/pivotalservices/concourse-pipeline-samples.git
-- name: PWS
+    uri: https://github.com/arulvannala/concourse-pipeline-samples.git
+- name: pws
   type: cf
   source:
     api: {{pws-api}}
@@ -43,17 +43,17 @@ jobs:
   - task: get-current-app-color
     file: concourse-pipeline-samples/pipelines/appdev/blue-green-app-deployment/ci/tasks/current-app-get-info.yml
     params:
-      PWS_APP_SUFFIX: {{pws-app-suffix}}
-      PWS_API: {{pws-api}}
-      PWS_ORG: {{pws-organization}}
-      PWS_USER: {{deploy-username}}
-      PWS_PWD: {{deploy-password}}
-      PWS_SPACE: {{pws-space}}
+      pws_APP_SUFFIX: {{pws-app-suffix}}
+      pws_API: {{pws-api}}
+      pws_ORG: {{pws-organization}}
+      pws_USER: {{deploy-username}}
+      pws_PWD: {{deploy-password}}
+      pws_SPACE: {{pws-space}}
   - task: prepare-app-manifest
     file: concourse-pipeline-samples/pipelines/appdev/blue-green-app-deployment/ci/tasks/app-manifest-prep.yml
     params:
-      PWS_APP_SUFFIX: {{pws-app-suffix}}
-  - put: PWS
+      pws_APP_SUFFIX: {{pws-app-suffix}}
+  - put: pws
     params:
       manifest: app-manifest-output/manifest.yml
       path: concourse-pipeline-samples/pipelines/appdev/blue-green-app-deployment/bgd-app
@@ -69,17 +69,17 @@ jobs:
   - task: get-current-app-color
     file: concourse-pipeline-samples/pipelines/appdev/blue-green-app-deployment/ci/tasks/current-app-get-info.yml
     params:
-      PWS_APP_SUFFIX: {{pws-app-suffix}}
-      PWS_API: {{pws-api}}
-      PWS_ORG: {{pws-organization}}
-      PWS_USER: {{deploy-username}}
-      PWS_PWD: {{deploy-password}}
-      PWS_SPACE: {{pws-space}}
+      pws_APP_SUFFIX: {{pws-app-suffix}}
+      pws_API: {{pws-api}}
+      pws_ORG: {{pws-organization}}
+      pws_USER: {{deploy-username}}
+      pws_PWD: {{deploy-password}}
+      pws_SPACE: {{pws-space}}
   - task: run-load-tests
     file: concourse-pipeline-samples/pipelines/appdev/blue-green-app-deployment/ci/tasks/load-tests.yml
     params:
-      PWS_APP_SUFFIX: {{pws-app-suffix}}
-      PWS_APP_DOMAIN: {{pws-app-domain}}
+      pws_APP_SUFFIX: {{pws-app-suffix}}
+      pws_APP_DOMAIN: {{pws-app-domain}}
 
 - name: promote-new-version
   serial: true
@@ -92,19 +92,19 @@ jobs:
   - task: get-current-app-color
     file: concourse-pipeline-samples/pipelines/appdev/blue-green-app-deployment/ci/tasks/current-app-get-info.yml
     params:
-      PWS_APP_SUFFIX: {{pws-app-suffix}}
-      PWS_API: {{pws-api}}
-      PWS_ORG: {{pws-organization}}
-      PWS_USER: {{deploy-username}}
-      PWS_PWD: {{deploy-password}}
-      PWS_SPACE: {{pws-space}}
+      pws_APP_SUFFIX: {{pws-app-suffix}}
+      pws_API: {{pws-api}}
+      pws_ORG: {{pws-organization}}
+      pws_USER: {{deploy-username}}
+      pws_PWD: {{deploy-password}}
+      pws_SPACE: {{pws-space}}
   - task: switch-app-routes
     file: concourse-pipeline-samples/pipelines/appdev/blue-green-app-deployment/ci/tasks/update-routes.yml
     params:
-      PWS_APP_SUFFIX: {{pws-app-suffix}}
-      PWS_APP_DOMAIN: {{pws-app-domain}}
-      PWS_API: {{pws-api}}
-      PWS_ORG: {{pws-organization}}
-      PWS_USER: {{deploy-username}}
-      PWS_PWD: {{deploy-password}}
-      PWS_SPACE: {{pws-space}}
+      pws_APP_SUFFIX: {{pws-app-suffix}}
+      pws_APP_DOMAIN: {{pws-app-domain}}
+      pws_API: {{pws-api}}
+      pws_ORG: {{pws-organization}}
+      pws_USER: {{deploy-username}}
+      pws_PWD: {{deploy-password}}
+      pws_SPACE: {{pws-space}}
